# capture

./: .gitignore  CMakeLists.txt  backup_containers.sh  capture.conf  ftxui.patch  main.cpp  main.hpp  menu_main.cpp  setup_crontab.sh  system_commands_libvirt  test_menu.cpp
